Salesforce/force-app/main/default/objects/HWI_Policy_Version__mdt/HWI_Policy_Version__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for creation of policy that defines what the limits and entitlements are for the policy</description>
    <label>HWI Policy Version</label>
    <pluralLabel>HWI Policy Versions</pluralLabel>
</CustomObject>