Salesforce/force-app/main/default/objects/HWI_Policy_Version__mdt/fields/Add_Cover_Accommodation_Limit__c.field-meta.xml
<CustomField>
    <fullName>Add_Cover_Accommodation_Limit__c</fullName>
    <label>Add Cover Accommodation Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>