Salesforce/force-app/main/default/objects/HWI_Policy_Version__mdt/fields/Additional_Cover_Limit_5_Dwellings__c.field-meta.xml
<CustomField>
    <fullName>Additional_Cover_Limit_5_Dwellings__c</fullName>
    <inlineHelpText>Additional Cover Limit - 5 and more Dwellings for Building Entitlement</inlineHelpText>
    <label>Additional Cover Limit - 5+ Dwellings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>