Salesforce/force-app/main/default/objects/HWI_Policy_Version__mdt/fields/Additional_Cover_Limit__c.field-meta.xml
<CustomField>
    <fullName>Additional_Cover_Limit__c</fullName>
    <label>Additional Cover Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>