Salesforce/force-app/main/default/objects/HWI_Policy_Version__mdt/fields/Ancillary_Limit__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Limit__c</fullName>
    <inlineHelpText>Ancillary Entitlement</inlineHelpText>
    <label>Ancillary Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>