Salesforce/force-app/main/default/objects/HWI_Policy_Version__mdt/fields/Building_Limit__c.field-meta.xml
<CustomField>
    <fullName>Building_Limit__c</fullName>
    <label>Building Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>