Salesforce/force-app/main/default/objects/HWI_Policy_Version__mdt/fields/Defects_Subsidence_Limit__c.field-meta.xml
<CustomField>
    <fullName>Defects_Subsidence_Limit__c</fullName>
    <inlineHelpText>The limit for Defects and Subsidence Entitlement</inlineHelpText>
    <label>Defects Subsidence Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>