Salesforce/force-app/main/default/objects/HWI_Policy_Version__mdt/fields/DS_Accommodation_Limit__c.field-meta.xml
<CustomField>
    <fullName>DS_Accommodation_Limit__c</fullName>
    <inlineHelpText>DS Accommodation Entitlement</inlineHelpText>
    <label>DS Accommodation Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>