Salesforce/force-app/main/default/objects/HWI_Policy_Version__mdt/fields/Duplex_NC_Accommodation_Limit__c.field-meta.xml
<CustomField>
    <fullName>Duplex_NC_Accommodation_Limit__c</fullName>
    <label>Duplex NC Accommodation Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>