Salesforce/force-app/main/default/objects/HWI_Policy_Version__mdt/fields/Duplex_Opt_Cover_Non_Completion_Limit__c.field-meta.xml
<CustomField>
    <fullName>Duplex_Opt_Cover_Non_Completion_Limit__c</fullName>
    <label>Duplex Opt Cover Non Completion Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>