Salesforce/force-app/main/default/objects/HWI_Policy_Version__mdt/fields/Duplex_Optional_Cover_Ancillary_Limit__c.field-meta.xml
<CustomField>
    <fullName>Duplex_Optional_Cover_Ancillary_Limit__c</fullName>
    <inlineHelpText>Duplex Additional cover Ancillary Limit for parent Policy</inlineHelpText>
    <label>Duplex Optional Cover Ancillary Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>