Salesforce/force-app/main/default/objects/HWI_Policy_Version__mdt/fields/Duplex_Optional_Cover_Building_Limit__c.field-meta.xml
<CustomField>
    <fullName>Duplex_Optional_Cover_Building_Limit__c</fullName>
    <label>Duplex Optional Cover Building Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>