Salesforce/force-app/main/default/objects/HWI_Policy_Version__mdt/fields/Months_Cover__c.field-meta.xml
<CustomField>
    <fullName>Months_Cover__c</fullName>
    <label>Months Cover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>