Salesforce/force-app/main/default/objects/HWI_Policy_Version__mdt/fields/Non_Completion_Limit__c.field-meta.xml
<CustomField>
    <fullName>Non_Completion_Limit__c</fullName>
    <label>Non Completion Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>