Salesforce/force-app/main/default/objects/HWI_Policy_Version__mdt/fields/Schedule_Excess__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Excess__c</fullName>
    <label>Schedule Excess</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>