Salesforce/force-app/main/default/objects/HWI_Policy_Version__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Schedule_Type__c</columns>
    <columns>Building_Limit__c</columns>
    <columns>Defects_Subsidence_Limit__c</columns>
    <columns>Non_Completion_Limit__c</columns>
    <columns>Ancillary_Limit__c</columns>
    <columns>Additional_Cover_Limit__c</columns>
    <columns>NC_Accommodation_Limit__c</columns>
    <columns>DS_Accommodation_Limit__c</columns>
    <columns>Add_Cover_Accommodation_Limit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>